create : assembly markers

--- a/OrderShopCart/Src/Server/OrderShopCart.Server/appsettings.json
+++ b/OrderShopCart/Src/Server/OrderShopCart.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "OrderShopCartDb": "data source=.;initial catalog=ordershopcartdb;TrustServerCertificate=True;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
