--- a/OrderShopCart/Src/Server/OrderShopCart.Server/OrderShopCart.Server.csproj
+++ b/OrderShopCart/Src/Server/OrderShopCart.Server/OrderShopCart.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<UserSecretsId>ce98a1dd-f7fc-4565-a0e3-f2ada069549b</UserSecretsId>
@@ -7,9 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi"  />
-		<PackageReference Include="Swashbuckle.AspNetCore" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+		<PackageReference Include="Mapster.DependencyInjection" />
+		<PackageReference Include="Mapster" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+		<PackageReference Include="Swashbuckle.AspNetCore" />
 	</ItemGroup>
 
 </Project>
