--- a/OrderShopCart/Src/Application/OrderShopCart.Application/OrderShopCart.Application.csproj
+++ b/OrderShopCart/Src/Application/OrderShopCart.Application/OrderShopCart.Application.csproj
@@ -1,3 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+	  <PackageReference Include="MediatR" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+  </ItemGroup>
 </Project>
