--- a/OrderShopCart/Src/Application/OrderShopCart.Application/OrderShopCart.Application.csproj
+++ b/OrderShopCart/Src/Application/OrderShopCart.Application/OrderShopCart.Application.csproj
@@ -1,12 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+	  <PackageReference Include="LanguageExt.Core" />
 	  <PackageReference Include="MediatR" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="CommandAndQuery\Product\Command\" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\Domain\OrderShopCart.Domain\OrderShopCart.Domain.csproj" />
+    <ProjectReference Include="..\OrderShopCart.Builder\OrderShopCart.Builder.csproj" />
   </ItemGroup>
 </Project>
