--- a/OrderShopCart/Src/Application/OrderShopCart.Builder/OrderShopCart.Builder.csproj
+++ b/OrderShopCart/Src/Application/OrderShopCart.Builder/OrderShopCart.Builder.csproj
@@ -1,4 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\OrderShopCart.Domain\OrderShopCart.Domain.csproj" />
+    <ProjectReference Include="..\..\Domain\OrderShopCart.Dto\OrderShopCart.Dto.csproj" />
+  </ItemGroup>
 </Project>
