--- a/OrderShopCart/Src/Application/OrderShopCart.Application/OrderShopCart.Application.csproj
+++ b/OrderShopCart/Src/Application/OrderShopCart.Application/OrderShopCart.Application.csproj
@@ -8,4 +8,7 @@
     <ProjectReference Include="..\..\Domain\OrderShopCart.Domain\OrderShopCart.Domain.csproj" />
     <ProjectReference Include="..\OrderShopCart.Builder\OrderShopCart.Builder.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CommandAndQuery\Group\Command\" />
+  </ItemGroup>
 </Project>
